k8s/dev.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: dev-app
  namespace: dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dev-app

  template:
    metadata:
      labels:
        app: dev-app

    spec:
      automountServiceAccountToken: false

      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:
      - name: dev-container
        image: myapp:v1
        imagePullPolicy: Never

        ports:
        - containerPort: 5000

        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true

          capabilities:
            drop:
              - ALL

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"

          limits:
            memory: "256Mi"
            cpu: "200m"

        livenessProbe:
          httpGet:
            path: /
            port: 5000

          initialDelaySeconds: 10
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /
            port: 5000

          initialDelaySeconds: 5
          periodSeconds: 3

---
apiVersion: v1
kind: Service

metadata:
  name: dev-service
  namespace: dev

spec:
  type: NodePort

  selector:
    app: dev-app

  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30001

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: deny-all
  namespace: dev

spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress
